force-app/zurich-base/main/default/objects/ContactPointEmail/ContactPointEmail.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>