force-app/zurich-base/main/default/objects/ContactPointEmail/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>(ZE/OCS) Identifica al contacto con el que está relacionada la vía de contacto.</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Point Emails</relationshipLabel>
    <relationshipName>ContactPointEmails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>