force-app/zurich-base/main/default/objects/ContactPointEmail/fields/INFOContactPointNumber__c.field-meta.xml
<CustomField>
    <fullName>INFOContactPointNumber__c</fullName>
    <description>(ZE/OCS) Identificador único de la vía en INFO.</description>
    <externalId>true</externalId>
    <label>INFO Contact Point Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>