force-app/zurich-base/main/default/objects/ContactPointEmail/fields/IsBounced__c.field-meta.xml
<CustomField>
    <fullName>IsBounced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(ZE/OCS) Identifica si la dirección ha dado un rebote. Actualizado desde MC.</description>
    <label>Is Bounced</label>
    <type>Checkbox</type>
</CustomField>