force-app/zurich-base/main/default/objects/ContactPointEmail/fields/ScopeId__c.field-meta.xml
<CustomField>
    <fullName>ScopeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OCS</description>
    <label>Scope Name</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Contact Point Emails</relationshipLabel>
    <relationshipName>ContactPointEmails</relationshipName>
    <type>Lookup</type>
</CustomField>